--- a/style.css
+++ b/style.css
@@ -103,16 +103,17 @@ nav {
     margin-top: 20px;
 }
 .jersey {
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
     background-color: rgb(241, 240, 240);
 }
-.jersey-content {
+.jersey-content, .fixtures-content {
     padding: 30px;
 }
 
-.jersey-content h1 {
-    font-size: 70px;
+.jersey-content h1, .fixtures-content h1 {
+    font-size: 60px;
+}
+.fixtures-content h1 {
+    color: white;
 }
 .jersey-item-wrap2 {
     display: block;
@@ -178,7 +179,78 @@ nav {
 .swiper {
     margin-top: 50px;
     background: none;
-    border-radius: 15px;
+}
+.fixtures-item {
+    overflow: hidden;
+    transition: .25s ease-out;
+    background-color: white;
+    border: 2px solid gray;
+}
+.fixtures-container {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.fixtures-container-upper {
+    display: flex;
+    padding: 10px;
+    justify-content: space-between;
+    border-bottom: 2px solid gray;
+    align-items: center;
+}
+.fixtures-container-upper img {
+    width: 50px;
+}
+.fixtures-container-middle {
+    margin-top: 20px;
+    margin-right: 30px;
+}
+.upper-team, .lower-team {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.table {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.fixtures-container-lower {
+    margin-top: 45px;
+    margin-bottom: 15px;
+}
+
+.fixtures-container-lower a{
+    border: none;
+    border-radius: 0px;
+    background-color: black;
+    padding: 15px;
+}
+
+.fixtures-container-lower a:hover{
+    border: none;
+    border-radius: 0px;
+    background-color: rgb(37, 37, 37);
+    padding: 15px;
+}
+.team-name {
+    display: flex;
+    align-items: center;
+}
+.team-name img {
+    width: 60px;
+}
+.lower-team {
+    .team-name {
+        img {
+            width: 40px;
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+    }
+}
+.lower-tx {
+    color: rgba(0, 0, 0, 0.671);
 }
 @media only screen and (min-width: 768px) {
     .nav-left-item h1 {
@@ -197,9 +269,12 @@ nav {
         margin-left: 10px;
         margin-right: 10px;
     }
-    .jersey-content {
+    .jersey-content, .fixtures-content{
         margin-left: 10%;
         margin-right: 10%;
+    }
+    .jersey-content h1, .fixtures-content h1 {
+        font-size: 70px;
     }
     .jersey {
         border-top-left-radius: 0px;
